# squareberg-hub

./: .gitignore  BACKLOG.md  LICENSE.txt  MANIFEST.in  OVERVIEW.md  README.md  SKILL_CREATE_APP.md  build-hub.sh  bump-version.sh  mkdocs.yml  pyproject.toml  serve-docs.sh
.github/workflows/: docs.yml  python-publish.yml
blueprints/: hub-design.md
docs/: getting-started.md  home-setup.md  index.md
docs/assets/: extra.css
docs/concepts/: apps.md  architecture.md  frontends.md
docs/developers/: hello-world.md  local-setup.md
docs/getting-started/: hello-world.md  installation.md
docs/guide/: api-metadata.md  cli.md  contributing.md  deployment.md  writing-apps.md
docs/reference/: hub-api.md  manifest.md  python-api.md
examples/hello/.squareberg/: manifest.toml
examples/hello/backend/: app.py  pyproject.toml
examples/hello/frontend/default/: index.html  package.json
hub/: cli.py  config.py  config.toml  explorer.html  main.py  manager.py  proxy.py  registry.py
hub/dashboard/: index.html  package-lock.json  package.json  upgrade-deps.sh  vite.config.js
hub/dashboard/src/: app.jsx
hub/dashboard/src/components/: AppCard.jsx
scripts/: build-hub.sh  bump-version.sh  cleanup-logo.sh  serve-docs.sh
tests/: conftest.py  test_cli_commands.py  test_cli_helpers.py  test_config.py  test_hub_api.py  test_process_lifecycle.py  test_registry.py
