[project]
name = "squareberg-hub"
version = "0.1.0"
description = "Squareberg — local application hub"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "typer[all]>=0.15",
    "tomli>=2.0; python_version < '3.11'",
    "aiosqlite>=0.21",
]

[project.scripts]
squareberg = "hub.cli:app"
sqb = "hub.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hub"]
