[project]
name = "squareberg-hub"
version = "0.1.0"
description = "Squareberg — local application hub"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "typer>=0.15",
    "tomli>=2.0; python_version < '3.11'",
    "aiosqlite>=0.21",
]

[project.scripts]
squareberg = "hub.cli:app"
sqb = "hub.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hub"]
